Fixes warnings